[gd_scene load_steps=14 format=2]

[ext_resource path="res://scripts/interface/menu/New_Game_Container.gd" type="Script" id=1]
[ext_resource path="res://NinjaAdventure/HUD/Dialog/MenuStatusContainer.png" type="Texture" id=2]
[ext_resource path="res://NinjaAdventure/HUD/Dialog/FacesetBox.png" type="Texture" id=3]
[ext_resource path="res://NinjaAdventure/HUD/Arrow.png" type="Texture" id=4]
[ext_resource path="res://NinjaAdventure/HUD/ArrowHover.png" type="Texture" id=6]
[ext_resource path="res://NinjaAdventure/HUD/ArrowDisabled.png" type="Texture" id=7]
[ext_resource path="res://NinjaAdventure/HUD/ArrowPressed.png" type="Texture" id=8]
[ext_resource path="res://NinjaAdventure/HUD/Font/monogram.ttf" type="DynamicFontData" id=9]

[sub_resource type="DynamicFont" id=1]
size = 23
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 9 )

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 9 )

[sub_resource type="Animation" id=3]
length = 2.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Buttons_Container/Left:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 14 ), Vector2( -7, 14 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Buttons_Container/Right:rect_position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 148, 14 ), Vector2( 155, 14 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "Frames_Show"
length = 5.6
loop = true
step = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("Player_Texture:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8, 1, 1.2, 1.4, 1.6, 1.8, 2, 2.2, 2.4, 2.6, 2.8, 3, 3.2, 3.4, 3.6, 3.8, 4, 4.2, 4.4, 4.6, 4.8, 5, 5.2, 5.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27 ]
}

[sub_resource type="DynamicFont" id=5]
size = 9
font_data = ExtResource( 9 )

[node name="New_Game_Container" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}
class_info = [ [ "3", "3", "3", "3", "3", "3", "Classe: Garoto" ], [ "3", "3", "3", "3", "3", "3", "Classe: Garota" ], [ "3", "6", "2", "2", "2", "6", "Classe: Ninja" ], [ "3", "6", "2", "2", "2", "6", "Classe: Ninja" ], [ "3", "6", "2", "2", "2", "6", "Classe: Ninja" ], [ "3", "6", "2", "2", "2", "6", "Classe: Ninja" ], [ "3", "8", "1", "4", "1", "6", "Classe: Ninja" ], [ "4", "8", "3", "3", "2", "7", "Classe: Ninja" ], [ "4", "7", "4", "1", "3", "4", "Classe: Samurai" ], [ "4", "7", "4", "1", "3", "4", "Classe: Samurai" ], [ "4", "7", "4", "1", "3", "4", "Classe: Samurai" ], [ "8", "5", "3", "3", "7", "2", "Classe: Esquimó" ], [ "5", "7", "3", "2", "4", "4", "Classe: Esquimó" ], [ "6", "3", "6", "1", "4", "2", "Classe: Pre-Histórico" ], [ "6", "3", "6", "1", "4", "2", "Classe: Pre-Histórico" ], [ "5", "2", "3", "1", "6", "2", "Classe: Pre-Histórico" ], [ "5", "2", "3", "1", "6", "2", "Classe: Pre-Histórico" ], [ "8", "2", "5", "0", "7", "3", "Classe: Nobreza" ], [ "10", "3", "7", "0", "9", "3", "Classe: Nobreza" ], [ "4", "6", "3", "3", "3", "4", "Classe: Nobreza" ], [ "5", "5", "5", "5", "5", "5", "Classe: Nobreza" ], [ "4", "7", "3", "7", "3", "4", "Classe: Nobreza" ], [ "5", "5", "3", "4", "5", "4", "Classe: Sobrenatural" ], [ "7", "5", "9", "3", "5", "5", "Classe: Sobrenatural" ], [ "4", "8", "2", "4", "4", "4", "Classe: Sobrenatural" ], [ "8", "10", "5", "7", "7", "5", "Classe: Sobrenatural" ], [ "4", "0", "4", "0", "4", "3", "Classe: Sobrenatural" ] ]

[node name="Label" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -95.0
margin_top = 38.3867
margin_right = 112.0
margin_bottom = 78.3867
rect_min_size = Vector2( 95, 40 )
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Selecione um Personagem"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Buttons_Container" type="Control" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -80.0
margin_top = -20.0
margin_right = 80.0
margin_bottom = 20.0
rect_min_size = Vector2( 160, 40 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Select" type="Button" parent="Buttons_Container"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -37.5
margin_top = -0.0893173
margin_right = 37.5
margin_bottom = 19.9107
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Buttons_Container/Select"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -30.0
margin_top = -6.5
margin_right = 30.0
margin_bottom = 6.5
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Selecionar"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Left" type="TextureButton" parent="Buttons_Container"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_top = -6.0
margin_right = 12.0
margin_bottom = 6.00001
rect_rotation = 90.0
rect_pivot_offset = Vector2( 6, 6 )
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 8 )
texture_hover = ExtResource( 6 )
texture_disabled = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Right" type="TextureButton" parent="Buttons_Container"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -12.0
margin_top = -6.0
margin_bottom = 6.0
rect_rotation = -90.0
rect_pivot_offset = Vector2( 6, 6 )
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 8 )
texture_hover = ExtResource( 6 )
texture_disabled = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Player_Texture" type="Sprite" parent="."]
position = Vector2( 160, 80 )
hframes = 4
vframes = 7
frame = 27

[node name="Animation" type="AnimationPlayer" parent="."]
autoplay = "Buttons_Moving"
anims/Buttons_Moving = SubResource( 3 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "Frames_Show"
anims/Frames_Show = SubResource( 4 )

[node name="Stats_Container" type="TextureRect" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -108.0
margin_top = -70.0
margin_right = 108.0
margin_bottom = -15.0
texture = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Class_Name" type="Label" parent="Stats_Container"]
margin_left = 7.71938
margin_top = 7.15816
margin_right = 119.719
margin_bottom = 19.1582
rect_min_size = Vector2( 112, 12 )
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Classe: Garoto"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Faceset_Box" type="TextureRect" parent="Stats_Container"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -53.0
margin_top = -23.0
margin_right = -7.0
margin_bottom = 23.0
texture = ExtResource( 3 )

[node name="Class_Faceset" type="TextureRect" parent="Stats_Container/Faceset_Box"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -19.0
margin_top = -19.0
margin_right = 19.0
margin_bottom = 19.0
rect_min_size = Vector2( 38, 38 )

[node name="Grid" type="GridContainer" parent="Stats_Container"]
anchor_top = 0.55
anchor_bottom = 0.55
margin_left = 13.0
margin_top = -11.0
margin_right = 112.0
margin_bottom = 11.0
custom_constants/vseparation = 2
custom_constants/hseparation = 12
columns = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Class_Health" type="Label" parent="Stats_Container/Grid"]
margin_right = 27.0
margin_bottom = 8.0
custom_fonts/font = SubResource( 5 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Vida: 3"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Class_Mana" type="Label" parent="Stats_Container/Grid"]
margin_left = 39.0
margin_right = 66.0
margin_bottom = 8.0
custom_fonts/font = SubResource( 5 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Mana: 3"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Class_Attack" type="Label" parent="Stats_Container/Grid"]
margin_top = 10.0
margin_right = 27.0
margin_bottom = 18.0
custom_fonts/font = SubResource( 5 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Ataque: 3"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Class_Defense" type="Label" parent="Stats_Container/Grid"]
margin_left = 39.0
margin_top = 10.0
margin_right = 66.0
margin_bottom = 18.0
custom_fonts/font = SubResource( 5 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Ataque: 3"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Class_Magic_Attack" type="Label" parent="Stats_Container/Grid"]
margin_top = 20.0
margin_right = 27.0
margin_bottom = 28.0
custom_fonts/font = SubResource( 5 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Ataque: 3"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Class_Speed" type="Label" parent="Stats_Container/Grid"]
margin_left = 39.0
margin_top = 20.0
margin_right = 66.0
margin_bottom = 28.0
custom_fonts/font = SubResource( 5 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Ataque: 3"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}
